<resources>
    <string name="app_name">Guía de Estudio</string>
    <string name="quiz_name">Examen de Historia y Cultura de México para el Proceso de Naturalización</string>
    <string name="start_button">Comenzar</string>
    <string name="next_button">Síquiente</string>
    <string name="question_one_page">Pregunta #1</string>
    <string name="question_two_page">Pregunta #2</string>
    <string name="question_three_page">Pregunta #3</string>
    <string name="question_four_page">Pregunta #4</string>
    <string name="question_five_page">Pregunta #5</string>
    <string name="results_page">Calificacion</string>
    <string name="submit_button">calificar respuestas</string>
    <string name="answers_page">Respuestas</string>
    <string name="restart_button">reiniciar</string>
    <string name="answers_button">ver respuestas</string>
    <string name="question_one">Deidad del México antiguo conocida como la "Serpiente Emplumada"</string>
    <string name="question_two">Las cabezas colosales son creaciones de la cultura:</string>
    <string name="question_three">¿En dónde se encuentran las pirámides del Sol y la Luna?</string>
    <string name="question_four">¿Cuales de las siguientes fueron instituciones coloniales?</string>
    <string name="question_five">El lema \"Sufragio efectivo, no reelección\" fue la bandera política de Francisco I. Madero</string>
    <string name="results_page_message">Felicidades, ha completado las preguntas!</string>
    <string name="input_hint">ingrese respuesta aquí</string>
    <string name="q2_answer1">Maya</string>
    <string name="q2_answer2">Olmeca</string>
    <string name="q2_answer3">Azteca</string>
    <string name="q2_answer4">Inca</string>
    <string name="q4_answer1">Prehispánicas</string>
    <string name="q4_answer2">La encomienda</string>
    <string name="q4_answer3">La Iglesia</string>
    <string name="q4_answer4">El visitador</string>
    <string name="q5_true">Verdad</string>
    <string name="q5_false">Falso</string>
    <string name="q1_answer">1. Quetzalcóatl</string>
    <string name="q2_answer">2. Maya</string>
    <string name="q3_answer">3. Teotihuacan</string>
    <string name="q4_answer">4. La encomienda y el visitador</string>
    <string name="q5_answer">5. Verdad</string>
</resources>