<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="32sp"
            android:paddingBottom="16dp"
            android:text="@string/question_four"/>
        <CheckBox
            android:id="@+id/checkbox_q4_option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:text="@string/q4_answer1" />
        <CheckBox
            android:id="@+id/checkbox_q4_option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:text="@string/q4_answer2" />
        <CheckBox
            android:id="@+id/checkbox_q4_option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:text="@string/q4_answer3" />
        <CheckBox
            android:id="@+id/checkbox_q4_option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:text="@string/q4_answer4" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/to_q5_button"/>
</RelativeLayout>