<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="32sp"
            android:paddingBottom="16dp"
            android:text="@string/question_two"/>

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:id="@+id/q2_radio_group">
            <RadioButton
                android:id="@+id/radio_q2_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/q2_answer1"
                android:textSize="22sp"
                android:textColor="#757575"/>
            <RadioButton
                android:id="@+id/radio_q2_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/q2_answer2"
                android:textSize="22sp"
                android:textColor="#757575"/>
            <RadioButton
                android:id="@+id/radio_q2_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/q2_answer3"
                android:textSize="22sp"
                android:textColor="#757575"/>
            <RadioButton
                android:id="@+id/radio_q2_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/q2_answer4"
                android:textSize="22sp"
                android:textColor="#757575"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/to_q3_button"/>
</RelativeLayout>