<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="32sp"
            android:paddingBottom="16dp"
            android:text="@string/question_five"/>
        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:id="@+id/q5_radio_group">
            <RadioButton
                android:id="@+id/radio_q5_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_false"
                android:textSize="22sp"
                android:textColor="#757575"/>
            <RadioButton
                android:id="@+id/radio_q5_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_true"
                android:textSize="22sp"
                android:textColor="#757575"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/submit_button"/>
</RelativeLayout>